2004-03-19  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: still wait for put confirmation to set file mtime
	  even if target file is already complete - this fixes repeated
	  transferring a file in mirror -c.
	* ftpclass.cc: handle storing 0 bytes by skipping data connection
	  establishment and still set the file mtime.

2004-03-18  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: set proper timeout for retry_time; better error handling
	  for port-range.
	* FileAccess.cc: (DebugPrint) check for \r\n in the string.
	* Makefile.am: use libtool for libtasks and libjobs; rename them.

2004-03-15  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fix a number of null refs; set auth_sent properly.
	* log.cc: don't write trailing \0.

2004-03-13  Alexander V. Lukyanov <lav@yars.free.net>

	* StatusLine.cc: don't redisplay status line if not needed.
	* ftpclass.cc: check loopback match in Handle_PASV; Connection
	  and ExpectQueue subclasses.
	* commands.cc: rewind args before calling builtin_open from builtin_lftp.

2004-03-04  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc, misc.h: (dirname_modify) new function.
	* LsCache.cc: (Changed) use dirname_modify to fix bug with trailing
	  slash.

2004-03-02  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fix multiline error joining to eliminate all numeric
	  status codes except the first one.

2004-03-01  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc: rewind args before calling command-specific handler.
	* commands.cc: don't rewind args, it is not rewinded in CmdExec.
	* ftpclass.cc: use all_lines in error reporintg; join multiline error
	  into single line.

2004-02-25  Alexander V. Lukyanov <lav@yars.free.net>

	* pgetJob.cc: nice progress bar.
	* ArgV.cc: init ind in ctor.
	* StatusLine.h: new Show methods to show StringSet.
	* StringSet.cc, StringSet.h: (AppendFormat) new method.
	* ftpclass.cc, Http.cc, Fish.cc, SFtp.cc: take over suspended sessions.
