@@ -1,3 +1,13 @@
+2004-03-25  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* FileSet.cc: init all fields in FileInfo.
+	* FtpDirList.cc: support MLSD; use parsers from ListInfo.
+	* FtpListInfo.cc: support MLSD.
+	* SFtp.h: fix 2 mem leaks.
+	* SFtp.cc: register protocol in module_init; add assert.
+	* ftpclass.h, ftpclass.cc: support MLSD.
+	* resource.cc: new setting ftp:use-mlsd.
+
 2004-03-19  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* FileCopy.cc: still wait for put confirmation to set file mtime
